Fixed alignment and removed grids

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,35 @@
 html {
   font-family: "Abhaya Libre", serif;
 }
+
+.masthead {
+  background-color: #423ca3;
+}
+
+.logo {
+  text-align: center;
+}
+
+.nav {
+  text-align: center;
+}
+
+.icon-label {
+  color: #fff;
+}
+
+li {
+  background-color: #15114c;
+  border-radius: 10px;
+}
+
+h1 {
+  color: #fff;
+}
+ @media only screen and (min-width: 60em) {
+
+   li {
+    float: right;
+   }
+
+ }
